Update Crawling customer review Tiki by Selenium.ipynb

--- a/Crawling customer review Tiki by Selenium.ipynb
+++ b/Crawling customer review Tiki by Selenium.ipynb
@@ -243,7 +243,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_Tiki_Crawl.to_csv('Tiki_Crawl.csv', index=False)"
+    "df_Tiki_Crawl.to_csv('Tiki_Crawl_Review.csv', index=False)"
    ]
   },
   {
@@ -253,7 +253,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_Tiki_Crawl= pd.read_csv('Tiki_Crawl.csv')"
+    "df_Tiki_Crawl= pd.read_csv('Tiki_Crawl_Review.csv')"
    ]
   },
   {
