--- a/CNN_and_Bi_LSTM_Vietnamese_sentiment_analysis.ipynb
+++ b/CNN_and_Bi_LSTM_Vietnamese_sentiment_analysis.ipynb
@@ -1565,12 +1565,12 @@
         "with open('tokenizer_data.pkl', 'rb') as input_file:\n",
         "    tokenizer_data = pickle.load(input_file)\n",
         "\n",
-        "df_Laz_Crawl = pd.read_csv('Laz_Crawl.csv')\n",
+        "df_Tiki_Crawl = pd.read_csv('Tiki_Crawl_Review.csv')\n",
         "\n",
-        "df_Laz_Crawl['Comments_merge'] = df_Laz_Crawl['Comments'].fillna(df_Laz_Crawl['Comments_extra'])\n",
-        "df_Laz_Crawl['Comments_Cleaned'] = df_Laz_Crawl['Comments_merge'].apply(cleaning)\n",
-        "df_Laz_Crawl['predicted_sentiment'] = df_Laz_Crawl['Comments_merge'].apply(lambda x: prediction(x, tokenizer_data, my_model))\n",
-        "df_Laz_Crawl"
+        "df_Tiki_Crawl['Comments_merge'] = df_Tiki_Crawl['Comments'].fillna(df_Tiki_Crawl['Comments_extra'])\n",
+        "df_Tiki_Crawl['Comments_Cleaned'] = df_Tiki_Crawl['Comments_merge'].apply(cleaning)\n",
+        "df_Tiki_Crawl['predicted_sentiment'] = df_Tiki_Crawl['Comments_merge'].apply(lambda x: prediction(x, tokenizer_data, my_model))\n",
+        "df_Tiki_Crawl"
       ],
       "metadata": {
         "colab": {
@@ -2004,7 +2004,7 @@
     {
       "cell_type": "code",
       "source": [
-        "sns.countplot(data=df_Laz_Crawl, x='predicted_sentiment')"
+        "sns.countplot(data=df_Tiki_Crawl, x='predicted_sentiment')"
       ],
       "metadata": {
         "colab": {
@@ -2043,8 +2043,8 @@
       "cell_type": "code",
       "source": [
         "custom_order = [\"Negative\", \"Positive\"]\n",
-        "sentiment_distribution = df_Laz_Crawl['predicted_sentiment'].value_counts()[custom_order]\n",
-        "category_sentiment = df_Laz_Crawl.groupby('Category')['predicted_sentiment'].value_counts(normalize=True).unstack().fillna(0)[custom_order]\n",
+        "sentiment_distribution = df_Tiki_Crawl['predicted_sentiment'].value_counts()[custom_order]\n",
+        "category_sentiment = df_Tiki_Crawl.groupby('Category')['predicted_sentiment'].value_counts(normalize=True).unstack().fillna(0)[custom_order]\n",
         "\n",
         "# Create subplots for pie chart and bar chart.\n",
         "colors = {'#f38989', '#78c1a3'}\n",
@@ -2103,7 +2103,7 @@
     {
       "cell_type": "code",
       "source": [
-        "df_Laz_Crawl.to_csv('Laz_Crawl_Sentiment.csv', index=False)"
+        "df_Tiki_Crawl.to_csv('Tiki_Crawl_Review_with_Sentiment.csv', index=False)"
       ],
       "metadata": {
         "id": "GugTAgdccgHm"
